--- a/parametros-estoques.ipynb
+++ b/parametros-estoques.ipynb
@@ -1,104 +1,152 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simulação de Parâmetros de Estoque com Visualização em Cards\n",
+    "\n",
+    "Este notebook calcula os principais parâmetros de controle de estoque e apresenta os resultados de forma visual com explicações acessíveis para leigos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a787eee",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
+    "from matplotlib.patches import Rectangle\n",
+    "from IPython.display import display, Markdown"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 🧮 Função para calcular os parâmetros logísticos\n",
     "def calcular_parametros(demanda_diaria, desvio_padrao_diario, lead_time_dias, custo_pedido, custo_armazenagem, preco_unitario):\n",
     "    z = 1.65  # 95% de nível de serviço\n",
     "    es = z * desvio_padrao_diario * np.sqrt(lead_time_dias)\n",
-    "    demanda_anual = demanda_diaria * 250\n",
-    "    lec = np.sqrt((2 * demanda_anual * custo_pedido) / (custo_armazenagem * preco_unitario))\n",
-    "    intervalo = lec / demanda_diaria\n",
     "    estoque_max = es + (demanda_diaria * lead_time_dias)\n",
     "\n",
+    "    # LEC limitado ao estoque máximo\n",
+    "    demanda_anual = demanda_diaria * 250\n",
+    "    lec = np.sqrt((2 * demanda_anual * custo_pedido) / (custo_armazenagem * preco_unitario))\n",
+    "    lec = min(lec, estoque_max)\n",
+    "\n",
+    "    # Recalcula intervalo baseado no LEC ajustado\n",
+    "    intervalo = lec / demanda_diaria\n",
+    "\n",
+    "    # Estoque médio condicionado\n",
     "    if lec >= estoque_max:\n",
     "        estoque_medio = es + ((demanda_diaria * lead_time_dias) / 2)\n",
     "    else:\n",
     "        estoque_medio = es + (lec / 2)\n",
     "\n",
+    "    # PP = ponto de pedido\n",
+    "    pp = es + (demanda_diaria * lead_time_dias) / 2\n",
+    "    if pp > estoque_medio:\n",
+    "        estoque_medio = pp  # garantia que EM ≥ PP\n",
+    "\n",
     "    return {\n",
-    "        \"Estoque de Segurança\": round(es, 2),\n",
-    "        \"LEC (Lote Econômico)\": round(lec, 2),\n",
-    "        \"Intervalo entre Pedidos (dias)\": round(intervalo, 2),\n",
-    "        \"Estoque Máximo\": round(estoque_max, 2),\n",
-    "        \"Estoque Médio\": round(estoque_medio, 2)\n",
-    "    }\n",
+    "        \"ES\": round(es, 2),\n",
+    "        \"PP\": round(pp, 2),\n",
+    "        \"EMAX\": round(estoque_max, 2),\n",
+    "        \"EM\": round(estoque_medio, 2),\n",
+    "        \"LEC\": round(lec, 2),\n",
+    "        \"IPD\": round(intervalo, 2)\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 🖼️ Função para gerar imagem em estilo \"cards\"\n",
+    "def gerar_cards_parametros(dados):\n",
+    "    fig, ax = plt.subplots(figsize=(12, 4))\n",
+    "    ax.set_xlim(0, 6)\n",
+    "    ax.set_ylim(0, 1)\n",
+    "    ax.axis('off')\n",
     "\n",
-    "# 📊 Função para simular a curva de estoque com linhas de referência\n",
-    "def simular_curva_estoque(lec, es, demanda_diaria, estoque_medio, estoque_max):\n",
-    "    dias = list(range(1, int(2 * lec / demanda_diaria) + 1))\n",
-    "    estoque = []\n",
-    "    nivel = lec + es  # estoque inicial\n",
+    "    cores = ['#FF6666', '#FFB266', '#66CC99', '#66B2FF', '#C299FF', '#FF99C8']\n",
+    "    siglas = list(dados.keys())\n",
+    "    valores = list(dados.values())\n",
     "\n",
-    "    for dia in dias:\n",
-    "        if dia % round(lec / demanda_diaria) == 0:\n",
-    "            nivel += lec\n",
-    "        nivel -= demanda_diaria\n",
-    "        estoque.append(nivel)\n",
+    "    for i, (sigla, valor) in enumerate(zip(siglas, valores)):\n",
+    "        card = Rectangle((i, 0), 1, 1, edgecolor='black', facecolor=cores[i], linewidth=1.5)\n",
+    "        ax.add_patch(card)\n",
+    "        ax.text(i + 0.5, 0.65, sigla, ha='center', va='center', fontsize=13, fontweight='bold')\n",
+    "        ax.text(i + 0.5, 0.35, f\"{valor}\", ha='center', va='center', fontsize=12)\n",
     "\n",
-    "    # Define o maior valor do eixo Y com base no maior parâmetro (LEC, EMAX ou ponto máximo da curva)\n",
-    "    margem = 0.15\n",
-    "    topo_y = max(nivel + lec, estoque_max, max(estoque)) * (1 + margem)\n",
-    "\n",
-    "    # Geração do gráfico\n",
-    "    plt.figure(figsize=(10, 5))\n",
-    "    plt.plot(dias, estoque, marker='o', label='Estoque Diário')\n",
-    "    plt.axhline(y=es, color='red', linestyle='--', label='Estoque de Segurança')\n",
-    "    plt.axhline(y=estoque_medio, color='orange', linestyle='--', label='Estoque Médio')\n",
-    "    plt.axhline(y=estoque_max, color='green', linestyle='--', label='Estoque Máximo')\n",
-    "\n",
-    "    plt.title('Simulação da Curva de Estoque com Faixas de Referência')\n",
-    "    plt.xlabel('Dias')\n",
-    "    plt.ylabel('Nível de Estoque')\n",
-    "    plt.ylim(0, topo_y)\n",
-    "    plt.legend()\n",
-    "    plt.grid(True)\n",
-    "    plt.savefig(\"grafico_estoque.png\")\n",
-    "    plt.show()\n",
-    "\n",
+    "    plt.tight_layout()\n",
+    "    plt.savefig(\"cards_simulacao_estoque.png\")\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# 🏁 Execução do exemplo prático\n",
-    "if __name__ == \"__main__\":\n",
-    "    resultado = calcular_parametros(\n",
-    "        demanda_diaria=40,\n",
-    "        desvio_padrao_diario=8,\n",
-    "        lead_time_dias=5,\n",
-    "        custo_pedido=120,\n",
-    "        custo_armazenagem=0.20,\n",
-    "        preco_unitario=30\n",
-    "    )\n",
+    "resultado = calcular_parametros(\n",
+    "    demanda_diaria=40,\n",
+    "    desvio_padrao_diario=8,\n",
+    "    lead_time_dias=5,\n",
+    "    custo_pedido=120,\n",
+    "    custo_armazenagem=0.20,\n",
+    "    preco_unitario=30\n",
+    ")\n",
     "\n",
-    "    print(\"📋 Parâmetros Calculados:\")\n",
-    "    for chave, valor in resultado.items():\n",
-    "        print(f\"- {chave}: {valor}\")\n",
+    "# Exibir parâmetros calculados\n",
+    "for k, v in resultado.items():\n",
+    "    print(f\"- {k}: {v}\")\n",
     "\n",
-    "    simular_curva_estoque(\n",
-    "        lec=resultado[\"LEC (Lote Econômico)\"],\n",
-    "        es=resultado[\"Estoque de Segurança\"],\n",
-    "        demanda_diaria=40,\n",
-    "        estoque_medio=resultado[\"Estoque Médio\"],\n",
-    "        estoque_max=resultado[\"Estoque Máximo\"]\n",
-    "    )\n"
+    "# Gerar imagem final\n",
+    "gerar_cards_parametros(resultado)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 📘 Explicações simples para leigos\n",
+    "explicacoes = {\n",
+    "    \"ES\": f\" Seu estoque mínimo de segurança deve ser de {resultado['ES']} unidades para evitar rupturas.\",\n",
+    "    \"PP\": f\" Quando seu estoque atingir {resultado['PP']} unidades, é hora de fazer um novo pedido.\",\n",
+    "    \"EMAX\": f\" O máximo de produtos que você deve manter é {resultado['EMAX']} unidades.\",\n",
+    "    \"EM\": f\" Seu estoque médio ao longo do tempo será de aproximadamente {resultado['EM']} unidades.\",\n",
+    "    \"LEC\": f\" O lote ideal de compra é de {resultado['LEC']} unidades para equilibrar custos.\",\n",
+    "    \"IPD\": f\" Você fará um novo pedido a cada {resultado['IPD']} dias em média.\"\n",
+    "}\n",
+    "\n",
+    "for explicacao in explicacoes.values():\n",
+    "    display(Markdown(f\"- {explicacao}\"))"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.10"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
