--- a/parametros-estoques.ipynb
+++ b/parametros-estoques.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Simulação de Parâmetros de Estoque com Visualização em Cards\n",
     "\n",
-    "Este notebook calcula os principais parâmetros de controle de estoque e apresenta os resultados de forma visual com explicações acessíveis para leigos."
+    "Este notebook calcula os principais parâmetros de controle de estoque e apresenta os resultados de forma visual com explicações acessíveis."
    ]
   },
   {
